version/0.25/_sources/api/solver/_autosummary/settings/momentum_source.rst.txt
:orphan:

.. _momentum_source:

momentum_source
===============

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.momentum_source.momentum_source
    :show-inheritance:

.. rubric:: Methods

========================================   ==========================================

Method                                                                        Summary

========================================   ==========================================
:ref:`list_properties <list_properties>`          List properties of selected object.

:ref:`resize <resize>`                         Set number of objects for list-object.

========================================   ==========================================

.. rubric:: Named object type

:ref:`reference_frame_velocity_child <reference_frame_velocity_child>`


.. rubric:: Included in:

==============================   ==============================================

Parent                                                                  Summary

==============================   ==============================================
:ref:`wall_film <wall_film_1>`       Wall Film Settings for boundary-condition.

==============================   ==============================================

